Fixing right margin on mobile

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -29,6 +29,11 @@ html {
   height: 100%;
   /*scroll-behavior: smooth;*/
 }
+/* //// for right margin on mobile ////     */
+html, body {
+  overflow-x: hidden;
+}
+
 body {
     height: 100%;
     background: url("https://mississaugajudo.s3.us-east-2.amazonaws.com/guy-poses.jpg") no-repeat center center fixed;
